style: set visibility hidden on class Filler to avoid its paint

--- a/src/ScrollableContainer.css
+++ b/src/ScrollableContainer.css
@@ -9,6 +9,7 @@
 
 .class__Filler {
   position: relative;
+  visibility: hidden;
   z-index: -1;
 }
 
